<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.mundane.dagger2learning.activity.IndexActivity"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <Button
            android:onClick="inject"
            android:text="@string/inject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:onClick="singleton"
            android:text="@string/singleton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:onClick="subcomponent"
            android:text="@string/subcomponent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:onClick="qualifier"
            android:text="@string/qualifier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:text="lazy和provider"
            android:onClick="lazyAndProvider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:text="@string/binds"
            android:onClick="binds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:onClick="intoset"
            android:text="@string/intoset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:onClick="intomap"
            android:text="@string/intomap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:text="bindsInstance"
            android:onClick="bindsInstance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <Button
            android:text="@string/component_builder"
            android:onClick="componentBuilder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


    </LinearLayout>

</ScrollView>
